<resources>
    <string name="app_name">ServiceApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="ok">OK</string>
    <string name="something_went_wrong">Something went wrong, contact support.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Internet permissions are needed for providing login
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Service</string>
    <string name="tab_text_2">Attendance</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="date">Date</string>
    <string name="sample_date">12-05-2018</string>
    <string name="location">Location</string>
    <string name="nature_of_service">Nature of Service</string>
    <string name="spare_replace">Spare Replace</string>
    <string name="spare_required">Spare Required</string>
    <string name="spare_rejected">Spare Rejected</string>
    <string name="pending">PENDING</string>
    <string name="in_progress">IN PROGRESS</string>
    <string name="completed">COMPLETED</string>
    <string name="customer_name">Customer</string>
    <string name="sample_company_name">ABC Company Ltd</string>
    <string name="truck_no">Truck No</string>
    <string name="sample_truck_no">TN 0102</string>
    <string name="choose_customer">Choose Customer</string>
    <string name="time">Time</string>
    <string name="sample_time">10:00 AM</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="employees">Employees</string>
    <string name="sample_emp_list">EMP01,EMP02..(+2)</string>
    <string name="logout">logout</string>
    <string name="select_company">Select a Company</string>
    <string name="select_employees">Select Employees</string>
    <string name="select_truck_no">Select Truck No</string>
</resources>
