<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/att_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/att_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/att_date_layout"
            style="@style/InfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date" />

            <TextView
                android:id="@+id/att_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:drawableRight="@drawable/ic_right_arrow"
                android:gravity="right|center_vertical"
                android:text="@string/sample_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/att_time_layout"
            style="@style/InfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/att_date_layout"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/time" />

            <TextView
                android:id="@+id/att_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:drawableRight="@drawable/ic_right_arrow"
                android:gravity="right|center_vertical"
                android:text="@string/sample_time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/att_customer_layout"
            style="@style/InfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/att_time_layout"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/customer_name" />

            <TextView
                android:id="@+id/att_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:drawableRight="@drawable/ic_right_arrow"
                android:gravity="right|center_vertical"
                android:text="@string/sample_company_name" />

        </LinearLayout>

        <Button
            android:id="@+id/att_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/att_customer_layout"
            android:layout_marginTop="@dimen/fab_margin"

            android:text="@string/mark_attendance" />
    </RelativeLayout>
</RelativeLayout>

