<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="57dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/service_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/service_root_element_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/service_date_layout"
                style="@style/InfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/service_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="right|center_vertical"
                    android:text="@string/sample_date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/service_customer_layout"
                style="@style/InfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/service_date_layout"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/customer_name" />

                <TextView
                    android:id="@+id/service_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="right|center_vertical"
                    android:text="@string/sample_company_name" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/service_employee_layout"
                style="@style/InfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/service_customer_layout"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/employees" />

                <TextView
                    android:id="@+id/service_employees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="right|center_vertical"
                    android:text="@string/sample_emp_list" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/service_truck_layout"
                style="@style/InfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/service_employee_layout"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/truck_no" />

                <TextView
                    android:id="@+id/service_truck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="right|center_vertical"
                    android:text="@string/sample_truck_no" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/service_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/service_truck_layout"
                android:hint="@string/location">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/service_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/service_nature_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/service_location_layout"
                android:hint="@string/nature_of_service">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/service_nature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="1" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/service_spare_replace_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/service_nature_layout"
                android:hint="@string/spare_replace">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/service_spare_replace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="1" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/service_spare_required_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/service_spare_replace_layout"
                android:hint="@string/spare_required">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/service_spare_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="1" />


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/service_status_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/service_spare_required_layout"

                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/service_status"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/service_pending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"

                        android:text="@string/pending" />

                    <RadioButton
                        android:id="@+id/service_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/in_progress" />

                    <RadioButton
                        android:id="@+id/service_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/completed" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/service_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/service_status_layout"

                android:text="Save" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>